# Benchmarks

./: CMakeLists.txt  Erase.h  Find.h  Find_sequence.h  Insert.h  Insert_sequence.h  Readme_Test.txt  Source_2.cpp  Timer.h  main.cpp  readme_1.txt  readme_2.txt  test_1.txt  test_2.txt  test_readme_1.txt  test_readme_2.txt
Associative_containers/: Erase_associative.h  Find_associative.h  Insert_associative.h
MyClass/: Product.h
Sequence_containers/: Erase_sequence.h  Find_sequence.h  Insert_sequence.h
Unordered_containers/: Erase_unordered.h  Find_unordered.h  Insert_unordered.h
